# edit2docs

./: .gitignore  LICENSE.ppt-master.MIT  NOTICE  README.ko.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
docs/: mcp-clients.md  native-render-plan.md
scripts/: lint_ascii_paths.py
scripts/migration/: rename_chinese_assets.py
src/edit2docs/: __init__.py  agent_guide.py  agent_tools.py  cli.py  config.py  simple.py
src/edit2docs/api/: dependencies.py  errors.py  main.py
src/edit2docs/api/routes/: assets.py  jobs.py  preview.py  raw.py  text_edits.py
src/edit2docs/core/: animation_config.py  config.py  error_helper.py  finalize_svg.py  image_gen.py  image_search.py  notes_to_audio.py  pptx_template_import.py  project_utils.py  svg_quality_checker.py
src/edit2docs/core/image_backends/: backend_bfl.py  backend_fal.py  backend_gemini.py  backend_ideogram.py  backend_minimax.py  backend_modelscope.py  backend_openai.py  backend_openrouter.py  backend_qwen.py  backend_replicate.py  backend_siliconflow.py  backend_stability.py  backend_volcengine.py  backend_zhipu.py
src/edit2docs/core/image_sources/: provider_openverse.py  provider_pexels.py  provider_pixabay.py  provider_wikimedia.py
src/edit2docs/core/pptx_to_svg/: chart_to_svg.py  slide_to_svg.py  tbl_to_svg.py  txbody_to_svg.py
src/edit2docs/core/prompts/: doc-editor-planner.en.md  document-writer.en.md  editor-planner.en.md  editor-slide.en.md  executor-base.en.md  executor-consultant-top.en.md  executor-consultant.en.md  executor-general.en.md  image-generator.en.md  image-searcher.en.md  sheet-designer.en.md  sheet-editor-planner.en.md  strategist.en.md  template-designer.en.md
src/edit2docs/core/source_to_md/: doc_to_md.py  web_to_md.py
src/edit2docs/core/svg_to_pptx/: drawingml_context.py  drawingml_converter.py  drawingml_elements.py  drawingml_styles.py  drawingml_utils.py  layout_repair.py  pptx_append.py  pptx_builder.py  pptx_cli.py  pptx_edit.py  pptx_notes.py  svg_scale.py  tspan_flattener.py  use_expander.py  use_href_expander.py  use_safety_net.py
src/edit2docs/core/svg_to_pptx/native_objects/: __init__.py  (+5 more)
src/edit2docs/core/template_import/: context.py
src/edit2docs/core/templates/: design_spec_reference.md  spec_lock_reference.md
src/edit2docs/core/tts_backends/: backend_cosyvoice.py  backend_edge.py  backend_elevenlabs.py  backend_minimax.py  backend_qwen.py
src/edit2docs/db/: __init__.py  models.py  session.py
src/edit2docs/db/migrations/: env.py
src/edit2docs/documents/: __init__.py  chart_edit.py  docx_engine.py  docx_html.py  docx_pages.py  number_format.py  pptx_build.py  xlsx_engine.py  xlsx_pages.py  xml_edit.py
src/edit2docs/i18n/: __init__.py  catalog.py
src/edit2docs/i18n/messages/: en.yaml  ko.yaml
src/edit2docs/llm/: __init__.py  anthropic_client.py  prompt_loader.py
src/edit2docs/mcp/: __init__.py  catalog.py  context.py  http_transport.py  local_main.py  local_server.py  server.py  stdio_main.py
src/edit2docs/render/: __init__.py  fonts.py  rasterize.py
src/edit2docs/services/: __init__.py  assets.py  bootstrap.py  jobs.py
src/edit2docs/storage/: __init__.py  base.py  content_disposition.py  local_fs.py  memory.py  s3.py
src/edit2docs/tools/: __init__.py  _edit_events.py  _export_metrics.py  _image_plan.py  _layout_brief.py  _reply_texts.py  _spec_validator.py  _workspace.py  analyze_template.py  apply_text_edits.py  audio.py  convert.py  edit_deck.py  edit_doc.py  execute.py  export.py  generate_deck.py  generate_doc.py  images.py  quality.py  render_preview.py  strategize.py  types.py
src/edit2docs/workers/: __init__.py  main.py
src/edit2docs/workers/executors/: __init__.py  edit_deck.py  generate_deck.py  noop.py  registry.py
tests/integration/: test_api_assets.py  test_api_jobs.py  test_api_multiformat.py  test_api_preview_edit.py  test_api_template_mode.py  test_api_text_edits.py  test_doc_generation_editing.py  test_edit_deck_generation.py  test_edit_robustness.py  test_generate_deck_image_pipeline.py  test_generate_deck_narration.py  test_korean_pipeline_e2e.py  test_mcp_asset_tools.py  test_mcp_generate_deck.py  test_mcp_http_transport.py  test_native_objects_roundtrip.py  test_sourceless_generation.py  test_standalone_bootstrap.py  test_template_mode_generation.py  test_wave2_export_roundtrip.py
tests/unit/: test_apply_text_edits.py  test_ascii_paths.py  test_autogen_group_ids.py  test_chart_and_table_render.py  test_color_quantize.py  test_db_models.py  test_deck_native_protection.py  test_documents_engines.py  test_docx_pages.py  test_edit_chart.py  test_edit_deck_helpers.py  test_english_first_i18n.py  test_execute_autoid_at_boundary.py  test_executor_korean_appendix.py  test_export_metrics.py  test_font_weight_suffix_stripping.py  test_generate_deck_robustness.py  test_hero_size_cap_and_text_overlap.py  test_i18n_catalog.py  test_icon_fuzzy_resolve.py  test_image_plan_parser.py  test_image_prompts_korean.py  test_image_ref_normalisation.py  test_job_service.py  test_korean_patches.py  test_layout_brief.py  test_layout_repair.py  test_layout_retry_promotion.py  test_llm_caching.py  test_mcp_skeleton.py  test_min_font_pt_floor.py  test_native_objects.py  test_page_zones_override.py  test_per_page_retry_budget.py  test_ported_preview_fidelity.py  test_ported_source_to_md.py  test_pptx_append.py  test_pptx_builder_per_slide_fallback.py  test_pptx_edit.py  test_preview_rendering.py  (+26 more)
(+11 files in other folders)
