[project]
name = "edit2docs"
version = "0.7.1"
description = "AI-agent-native document engine: generate and chat-edit DOCX, XLSX and PPTX as a Python library, agent tool set, MCP server or hosted service. English-first with first-class Korean support. Sister project of edit2ppt."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "edit2docs contributors"}]
keywords = [
    "pptx", "docx", "xlsx", "powerpoint", "word", "excel", "ooxml",
    "document-generation", "document-editing", "presentation",
    "ai-agent", "agent-tools", "llm", "mcp", "model-context-protocol",
    "anthropic", "claude", "korean", "i18n",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

# Core = everything the LIBRARY / agent-tools / local MCP surfaces need:
# the tool layer (generate/edit/preview/text-edit) with zero server infra.
# `pip install edit2docs` stays lean; the hosted service adds `[server]`.
dependencies = [
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # i18n + spec_lock / edit-plan parsing
    "pyyaml>=6.0",
    # Core engine dependencies (from ppt-master)
    "python-pptx>=0.6.21",
    "python-docx>=1.1.0",
    "PyMuPDF>=1.23.0",
    "mammoth>=1.6.0",
    "openpyxl>=3.1.0",
    # Lossless raw-layer editing for xlsx/docx: charts, sparklines,
    # customXml and cached formula values survive edits byte-identical.
    "contextifier>=0.4.0",
    # Native chart export (data-pptx-native markers) generates the chart's
    # embedded XLSX workbook with XlsxWriter (upstream 53c6cad5).
    "XlsxWriter>=3.0",
    "nbconvert>=7.0.0",
    "markdownify>=0.11.6",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "Pillow>=9.0.0",
    "numpy>=1.20.0",
    "lxml>=5.3.0",
    # TTS
    "edge-tts>=7.2.8",
    # LLM
    "anthropic>=0.40.0",
    # MCP (Model Context Protocol) — powers the zero-infra `edit2docs-mcp`
    "mcp>=1.0.0",
    # Native raster layer (docs/native-render-plan.md M1) — both are
    # self-contained wheels: resvg for SVG->PNG, fontTools for metrics.
    "resvg-py>=0.3.3",
    "fonttools>=4.50.0",
]

[project.optional-dependencies]
# Hosted multi-tenant service: FastAPI + DB + object storage + job queue.
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.17",
    "sse-starlette>=2.1.3",
    "aioboto3>=13.2.0",
    "botocore>=1.35.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "arq>=0.26.1",
    "redis>=5.2.0",
    "structlog>=24.4.0",
]
dev = [
    # The test suite covers the hosted service too.
    "edit2docs[server]",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.2",
    "ruff>=0.7.0",
    "pyright>=1.1.388",
    "pre-commit>=4.0.0",
]
images = [
    # AI image generation backends — optional. Each gated by env var.
    "google-genai>=1.0.0",
    "openai>=1.55.0",
]
svg-fallback = [
    # SVG -> PNG fallback for legacy Office. Pick one.
    "cairosvg>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/CocoRoF/edit2docs"
Issues = "https://github.com/CocoRoF/edit2docs/issues"
Upstream = "https://github.com/hugohe3/ppt-master"

[project.scripts]
edit2docs = "edit2docs.cli:main"
# Zero-infra stdio MCP server over local files (Claude Desktop / Code / Cursor):
#   uvx --from edit2docs edit2docs-mcp   or   pip install edit2docs && edit2docs-mcp
edit2docs-mcp = "edit2docs.mcp.local_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edit2docs"]

[tool.hatch.build.targets.wheel.sources]
"src/edit2docs" = "edit2docs"

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [
    "src/edit2docs/core",  # ppt-master fork; lint separately if/when we rewrite
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "E402"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: hits external services (LLM, image, TTS)",
    "slow: takes more than ~5s",
]

# ---------------------------------------------------------------------------
# Pyright
# ---------------------------------------------------------------------------

[tool.pyright]
include = ["src/edit2docs", "tests"]
exclude = [
    "src/edit2docs/core",  # ppt-master fork has its own conventions
    "**/__pycache__",
    ".venv",
]
pythonVersion = "3.12"
typeCheckingMode = "basic"
